# fastapi-board

./: Dockerfile  README.md  alembic.ini  docker-compose-local.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  run-docker.sh
alembic/: env.py
app/: config.py  db.py  main.py  redis.py  router.py
app/auth/: crud.py  jwt.py  models.py  routes.py  schemas.py  security.py  utils.py
app/boards/: crud.py  models.py  routes.py  schemas.py
app/posts/: crud.py  models.py  routes.py  schemas.py
scripts/: generate_jwt_secret.py
tests/test_boards/: test_crud.py
tests/test_posts/: test_crud.py
